samples/_failures_safe/1761794673_acad89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79cf74e4.c: In function ‘tokenize_all’:
./samples/SAFE/__tmp_79cf74e4.c:173:5: error: expected identifier at end of input
  173 |     while (tokenize_next(t) && t->tokens[t->token_count - 1].
      |     ^~~~~
./samples/SAFE/__tmp_79cf74e4.c:173:5: error: expected declaration or statement at end of input
